[SCRUM-193] refactor: SlackController 리팩토링
- Slack json을 파싱하는 부분을 SlackController에서 Slack 객체의 생성자로
- json에서 직접 반복해서 꺼내는 것이 안이라 Slack에 getter를 호출하도록